tests/valid/variables/assign_val.rs
/*
return: 0
*/

main(): i32 {
    a: i64;
    b: i64 = a = 0;
    return b;
}