tests/invalid/numbers/missing_paren.rs
/*
fail: 1
*/

main(: i64 {
    return 0;
}